policy/labelconstraint/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-app
spec:
  containers:
  - image: kudohn/app1:v1
    name: my-app
